Add MifronPart1 and point Mifron at final split parent